# openvino-dockerfile

./: README
cpu/: Dockerfile
cpu-r4/: Dockerfile  README
dldt-gst/: Dockerfile
dldt-multi-stages/: Dockerfile
gpu/: Dockerfile
gpu-r4/: Dockerfile  README
gpu-r4-gst-dev/: Dockerfile  README
gpu-r4-runtime-net-install-comp/: Dockerfile  gen-runtime-openvino-docker.sh
gstreamer-1.16.2/: Dockerfile  build.sh
gstreamer-1.16.2-msdk-20.1.0-from-src/: Dockerfile
gstreamer-1.16.2-msdk-20.1.0-from-src/patches/gstreamer-media-SDK/: mfx.patch
gstreamer-1.16.2-msdk-20.1.0-openvino-gva-keep-src/: Dockerfile
gstreamer-1.16.2-msdk-20.1.0-openvino-gva-keep-src/patches/gst-plugins-base/: 0001-Fix-a-context-leak-when-display_create_context-faile.patch
linda/ubuntu1604-openvino19r01-gst-va/: Dockerfile  build.sh
linda/ubuntu1804-openvino19r2-gst-va/: Dockerfile.1804.openvino-r2  README
openvino-2019.3.376-hddldaemon/: Dockerfile  README  build.sh
openvino-2019.3.376-hddldaemon-centos/: Dockerfile  README  build.sh  start_hddl.sh
openvino-2019r11-runtime/: Dockerfile  gen-runtime-openvino-docker.sh
openvino-gst-2019r3-lv/: Dockerfile  README
openvino-hddl-2019r11/: Dockerfile  README
server/: CMakeLists.txt  README.md  main.cpp  serialization.h  server.cpp
server/include/: cnn.hpp  detector.hpp
server/src/: align_transform.cpp
